tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__fish_multiline_command_execution.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized().as_ref()
---
✅ [32mCreated new worktree for [1m[32mfish-multiline[0m[32m, changed directory to [1m[32m[TMPDIR]/test-repo.fish-multiline[0m
🔄 [36mExecuting (--execute):[0m
[40m [0m [1m[34mecho [32m'line 1'; [1m[34mecho [32m'line 2'; [1m[34mecho [32m'line 3'

line 1
line 2
line 3
