tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__fish_remove_no_directive_leak.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: normalized.as_ref()
---
🔄 [36mRemoving worktree for [1mfish-to-remove[0m...[0m
Removed worktree for [1mfish-to-remove[0m
