tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_with_interactive_approval_demo.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
y

^D🟡 [33m[1m[33morigin[0m[33m wants to execute [1m[33m1[0m[33m command:[0m

🔄 pre-merge [1mtest[0m:
[40m [0m  [1m[34mecho[0m [32m'✓ Tests passed'[0m[0m

💡 Allow and remember? [1m[y/N][0m 
⚪ Commands declined, continuing merge
🔄 [36mRunning pre-merge [1mtest[0m:[0m
[40m [0m  [1m[34mecho[0m [32m'✓ Tests passed'[0m[0m
✓ Tests passed
🔄 [36mMerging 1 commit to [1m[36mmain[0m[36m @ [2m[36m[HASH][0m[0m (no commit/squash/rebase needed)
[40m [0m  * [33m[HASH][m[33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m Add feature
[40m [0m   feature.txt | 1 [32m+[m
[40m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 1 file, [32m+1[0m)
🔄 [36mRemoving worktree & branch...[0m
✅ [32mRemoved worktree & branch for [1m[32mfeature[0m[32m, changed directory to [1m[32m[TMPDIR]/test-repo[0m[0m
