tests/integration_tests/snapshots/integration__integration_tests__shell_wrapper__tests__merge_with_mixed_stdout_stderr_bash.snap
---
source: tests/integration_tests/shell_wrapper.rs
expression: output.normalized()
---
🔄 [36mRunning pre-merge: [1mcheck1[0m:[0m
[40m [0m  [1m[34m/Users/maximilian/workspace/worktrunk.worktree-failure/tests/fixtures/mixed-output.sh[0m check1 3[0m

[check1] stdout line 1
[check1] stderr line 1
[check1] stdout line 2
[check1] stderr line 2
[check1] stdout line 3
[check1] stderr line 3
[check1] stdout complete
[check1] stderr complete

🔄 [36mRunning pre-merge: [1mcheck2[0m:[0m
[40m [0m  [1m[34m/Users/maximilian/workspace/worktrunk.worktree-failure/tests/fixtures/mixed-output.sh[0m check2 3[0m

[check2] stdout line 1
[check2] stderr line 1
[check2] stdout line 2
[check2] stderr line 2
[check2] stdout line 3
[check2] stderr line 3
[check2] stdout complete
[check2] stderr complete

🔄 [36mMerging 1 commit to [1m[36mmain[0m @ [2m[36me28e0ba[0m[0m (no commit/squash/rebase needed)

[40m [0m  * [33me28e0ba[m[33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m Add feature

[40m [0m   feature.txt | 1 [32m+[m
[40m [0m   1 file changed, 1 insertion(+)

✅ [32mMerged to [1m[32mmain[0m[0m (1 commit, 1 file, [32m+1[0m)
✅ [32mReturned to primary at [1m[32m[TMPDIR]/test-repo[0m[0m
🔄 [36mRemoving worktree & branch...[0m
